tests/fixtures/language/v3/invalid/modules/deferred-missing-hint.allium
-- allium: 3

deferred SomeProcess

entity Doc {
    title: String
}

rule CreateDoc {
    when: Create(title)
    ensures: Doc.created(title: title)
}

rule Invoke {
    when: Invoke(doc)
    ensures: SomeProcess(doc)
}
